--- a/_posts/2013-07-01-Reversi.md
+++ b/_posts/2013-07-01-Reversi.md
@@ -10,7 +10,6 @@ course: Data Structures and Algorithms
 code: https://github.com/Walleclipse/Ultimate_Reversi
 ---
 
-
-This C++ Reversi (Othello) program includes a GUI and supports saving/loading games, online multiplayer, and AI battles. The AI is implemented with Alpha-Beta Pruning, Iterative Deepening, and a Translation Table for optimal performance.
+My first serious programming project: a fully-featured Reversi (Othello) game in C++. It includes a GUI, save/load functionality, online multiplayer, and AI opponents powered by Alpha-Beta pruning, iterative deepening, and transposition tables. The AI consistently ranked in the top 10% on competitive platforms—a formative experience that sparked my interest in intelligent systems.
 
 [//]: # (The AI bot ranked among the top 10% in both the Reversi and Ataxx competitions, the top 5% in the Gomoku competition, and the top 3% in the Renju competition on the <a href="https://www.botzone.org.cn/">Botzone</a> online multi-agent competitive platform.)
