--- a/_posts/2018-08-01-OCR.md
+++ b/_posts/2018-08-01-OCR.md
@@ -11,8 +11,7 @@ code: https://github.com/Walleclipse/ChineseAddress_OCR
 video: https://www.bilibili.com/video/av30081208 
 ---
 
-
-This work presents an efficient pipeline for text recognition in noisy, blurry images by combining CTPN with DenseNet for detection and recognition. Fuzzy matching aligns detected text with a predefined library for refined results.
+Reading text from blurry, noisy photos of real documents is surprisingly hard for computers. We built a practical pipeline combining CTPN detection with DenseNet recognition, plus fuzzy matching to map detected text to a known library. The system handles the messy reality of photographed documents where perfect scans aren't available.
 
 [//]: # (Our method achieves an 83% accuracy on highly noisy datasets, with a 97% approximate accuracy for cases where the edit distance is less than 3.)
 
