--- a/_posts/2019-05-01-iWildCam.md
+++ b/_posts/2019-05-01-iWildCam.md
@@ -11,5 +11,4 @@ arxiv: https://arxiv.org/abs/1907.13037
 code: https://github.com/Walleclipse/iWildCam_2019_FGVC6
 ---
 
-
-This work proposes an efficient method for categorizing wild animals using advanced image augmentation (cutout, mixup, label smoothing) and ensemble learning. These techniques enhanced model robustness and secured a top 7/336 placement in the iWildCam 2019 competition at CVPR 2019.
+Camera traps capture millions of wildlife images—but who's going to classify them all? Our solution combines smart data augmentation (cutout, mixup, label smoothing) with ensemble learning to robustly identify animals in challenging, real-world conditions. This approach earned us 7th place out of 336 teams (top 2%) in the iWildCam 2019 Challenge at CVPR.
