--- a/_posts/2019-06-01-UFO.md
+++ b/_posts/2019-06-01-UFO.md
@@ -10,5 +10,4 @@ course: Python Package for  Ultra Fast Optics
 code: https://github.com/Walleclipse/Pulse_Evolution
 ---
 
-
-This project presents a user-friendly platform with a GUI for simulating pulse evolution in optical fibers, including laser pulse representation, fiber modeling, and nonlinear processes like four-wave mixing and supercontinuum generation. It is designed for users of all experience levels.
+Understanding ultrafast optics shouldn't require a physics PhD. I built a user-friendly Python toolkit with a graphical interface for simulating how laser pulses evolve through optical fibers. From basic pulse propagation to complex nonlinear effects like four-wave mixing and supercontinuum generation—all accessible whether you're an expert or just getting started.
