--- a/_posts/2019-07-24-AGPC.md
+++ b/_posts/2019-07-24-AGPC.md
@@ -12,4 +12,4 @@ arxiv: https://aclanthology.org/P19-2032/
 code: https://github.com/Walleclipse/AGPC
 ---
 
-This paper introduces the Personalized Comment Generation Network, a method for automatically generating social media comments that are relevant, grammatically accurate, and aligned with individual personality traits and styles.
+Social media comments are deeply personal—can AI capture that? We developed a Personalized Comment Generation Network that produces relevant, grammatically correct comments matching individual personality traits and writing styles. Moving beyond generic responses toward truly personalized AI interaction.
