--- a/_posts/2020-07-31-MEKF.md
+++ b/_posts/2020-07-31-MEKF.md
@@ -13,5 +13,4 @@ code: https://github.com/intelligent-control-lab/MEKF_MAME
 video: https://www.youtube.com/watch?v=15vXtd5rg70&t=60s 
 ---
 
-
-This paper addresses the train-test generalization gap by introducing online adaptation methods inspired by the Extended Kalman Filter (EKF) to update neural network models in test time.
+Neural networks often fail when test conditions differ from training—the classic train-test gap. Rather than accept this, we asked: what if the model could adapt itself at test time? Inspired by control theory, we apply Extended Kalman Filter principles to update neural network weights on the fly using incoming observations. The approach bridges the gap between offline learning and real-time adaptation.
