--- a/_posts/2021-01-08-NRLS.md
+++ b/_posts/2021-01-08-NRLS.md
@@ -11,5 +11,4 @@ arxiv: https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198
 code: https://github.com/intelligent-control-lab/MEKF_MAME
 ---
 
-
-This paper presents an online adaptable multi-task model for predicting human intention and trajectory. The proposed approach integrates EKF with exponential moving average filtering and a dynamic multi-epoch update strategy to enhance accuracy using feedback from observed trajectories.
+Predicting what a human will do next is crucial for safe human-robot collaboration—but people are unpredictable, and models trained offline quickly become stale. We built an online adaptation framework combining Extended Kalman Filtering with exponential moving average smoothing and dynamic multi-epoch updates. The result: neural networks that continuously refine their predictions using real-time feedback, staying accurate even as human behavior evolves.
