--- a/_posts/2021-04-01-OE.md
+++ b/_posts/2021-04-01-OE.md
@@ -11,5 +11,4 @@ arxiv: https://opg.optica.org/oe/fulltext.cfm?uri=oe-29-16-26068&id=453824
 code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking 
 ---
 
-
-This work introduces SAC-SPGDM, a hybrid algorithm combining stochastic parallel gradient descent with the soft actor-critic reinforcement learning method, enabling fast and robust optical control for coherent stacking of 128 pulses as demonstrated in simulations.
+Coherent pulse stacking can boost laser power dramatically, but controlling it is a nightmare—the system is nonlinear, noisy, and hard to optimize. We combined the best of two approaches: stochastic gradient descent for speed and soft actor-critic reinforcement learning for robustness. Our hybrid SAC-SPGDM algorithm successfully stacks 128 pulses in simulation, pointing toward more powerful and stable laser systems.
