--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -14,5 +14,4 @@ blog: https://medium.com/pytorch/training-compact-transformers-from-scratch-in-3
 highlight: true
 ---
 
-
-This paper challenges the notion that transformers require large datasets, demonstrating that with appropriate size and tokenization, they can match or surpass CNNs on small datasets. The Compact Convolutional Transformer (CCT) achieves 98% accuracy on CIFAR-10 with only 3.7M parameters, outperforming other transformers in efficiency and rivaling ResNet50 at 15% of its size.
+Everyone assumed Vision Transformers need massive datasets—we proved them wrong. By rethinking model size and tokenization, our Compact Convolutional Transformer (CCT) achieves 98% accuracy on CIFAR-10 using just 3.7M parameters. That's better than other transformers and rivals ResNet at a fraction of the size. The takeaway: with the right architecture choices, transformers can thrive on small data too.
