--- a/_posts/2021-06-19-ACR.md
+++ b/_posts/2021-06-19-ACR.md
@@ -13,5 +13,4 @@ code: https://github.com/SHI-Labs/Semi-Supervised-Transfer-Learning
 highlight: true
 ---
 
-
-This work introduces adaptive consistency regularization to unify semi-supervised and transfer learning, leveraging pre-trained source models and labeled/unlabeled target data. By adaptively selecting examples for regularization, the method improves target task performance and complements existing approaches for additional gains.
+What happens when you combine the best of two worlds—pre-trained models from one domain and a mix of labeled and unlabeled data from another? We developed Adaptive Consistency Regularization to answer that question. The key insight: not all unlabeled samples are equally useful for transfer. Our method intelligently selects which examples to regularize, squeezing maximum value from limited supervision while respecting what the source model already knows.
