--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -14,5 +14,4 @@ video: https://neurips.cc/virtual/2021/poster/26476
 highlight: true
 ---
 
-
-This paper proposes Property-Aware Relation (PAR) Networks for few-shot molecular property prediction, combining property-aware embeddings and adaptive relation graph learning to tailor molecular relations to specific properties. A meta-learning strategy selectively updates parameters to balance generic and property-specific knowledge.
+Drug discovery relies on predicting molecular properties—but what if you only have a handful of examples? Traditional methods fail here. Our Property-Aware Relation (PAR) Networks learn to adapt molecular relationships based on which property you're predicting. A clever meta-learning strategy balances general chemistry knowledge with property-specific patterns. The result: accurate predictions from minimal data, accelerating early-stage drug discovery.
