--- a/_posts/2022-05-01-WeHelp.md
+++ b/_posts/2022-05-01-WeHelp.md
@@ -11,5 +11,4 @@ arxiv: https://arxiv.org/abs/2409.12159
 code: https://github.com/Walleclipse/WeHelp
 ---
 
-
-This project introduces WeHelp, a shared autonomy system for wheelchair users with three modes: autonomous following via visual tracking, and remote control or teleoperation activated through speech recognition for seamless assistance.
+Wheelchairs should adapt to users, not the other way around. WeHelp is a shared autonomy system we built for wheelchair users, offering three seamless modes: autonomous following using visual tracking (just walk and the chair follows), plus voice-activated remote control and teleoperation for tighter spaces or specific needs. Built to make mobility more accessible and dignified.
