--- a/_posts/2023-06-26-OPSEnv.md
+++ b/_posts/2023-06-26-OPSEnv.md
@@ -12,5 +12,4 @@ code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking
 video: https://icml.cc/virtual/2022/19942
 ---
 
-
-This paper introduces an optical simulation environment for reinforcement learning-based controllers, modeling nonconvexity, nonlinearity, and time-dependent noise in optical systems. Benchmark results for various reinforcement learning algorithms are also provided.
+Can reinforcement learning master the chaos of optical systems? We built a simulation environment to find out. Real optical control is brutal—nonconvex, nonlinear, and plagued by time-dependent noise—yet traditional controllers struggle. Our environment captures these challenges faithfully, providing a testbed where RL algorithms can be benchmarked, compared, and improved for real-world laser control applications.
