--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -13,5 +13,4 @@ blog: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
 highlight: true
 ---
 
-
-This paper presents BioSLAM, a lifelong SLAM framework with a dual-memory mechanism: dynamic memory for learning new observations and static memory for balancing old and new knowledge. It is the first memory-enhanced system for incremental place recognition in long-term navigation.
+Humans navigate familiar places effortlessly while still learning new ones—why can't robots? BioSLAM brings this capability to visual place recognition through a brain-inspired dual-memory system. Dynamic memory rapidly encodes new observations; static memory consolidates them without erasing what came before. The result is the first SLAM system that genuinely supports lifelong learning, enabling robots to navigate for months or years without "forgetting" previously visited places.
