--- a/_posts/2024-05-17-SNR.md
+++ b/_posts/2024-05-17-SNR.md
@@ -11,5 +11,4 @@ arxiv: https://openreview.net/forum?id=iV0jktFZ5Y
 code: https://openreview.net/attachment?id=iV0jktFZ5Y&name=supplementary_material
 ---
 
-
-This work addresses over-regularization in certified training by introducing neuron variance and stability, analyzing their impact on robustness. Extending the Signal-to-Noise Ratio (SNR) framework, it proposes SNR-inspired loss functions to mitigate over-regularization and improve robustness.
+Certified training promises neural networks that are provably robust—but at what cost? We found that existing methods over-regularize, crippling the model's performance. The culprit: unstable neurons with high variance. Borrowing intuition from signal processing, we introduce Signal-to-Noise Ratio (SNR) inspired loss functions that tame this variance without sacrificing what the network actually learned. The result is robustness you can trust, with accuracy you can use.
