--- a/_posts/2024-07-11-MedGPT.md
+++ b/_posts/2024-07-11-MedGPT.md
@@ -10,5 +10,4 @@ venue: "MedRxiv preprint"
 arxiv: https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2 
 ---
 
-
-This study enhances GPT-4's domain expertise using the Retrieval-Augmented Generation (RAG) approach to integrate evidence-based knowledge. It also develops a semi-automatic evaluation framework combining metrics like BERT score, BLEURT, and cosine similarity with human assessments to streamline evaluation in medical decision-making.
+Can GPT-4 help cardiologists make better decisions? We put it to the test in cardiac electrophysiology—a complex specialty where AI assistance could really matter. Using Retrieval-Augmented Generation (RAG), we boosted GPT-4's domain expertise with evidence-based medical knowledge. But evaluating AI in medicine is tricky, so we also developed a semi-automatic framework combining metrics like BERT score with physician assessments. The result: a practical pathway for deploying AI in clinical decision support.
