--- a/_posts/2024-11-08-KOROL.md
+++ b/_posts/2024-11-08-KOROL.md
@@ -13,6 +13,4 @@ code: https://github.com/hychen-naza/KOROL
 video: https://x.com/i/status/1832866560270385233 
 ---
 
-
-
-This paper proposes a method to construct a Koopman operator using object features extracted from images, enabling precise propagation of robot trajectories. By embedding scene information into learned features, the approach achieves high task success rates and extends to real-world manipulation without ground-truth object states.
+How can a robot manipulate objects it's never seen before, using only camera images? KOROL (Koopman Operator Rollout) learns to extract object features from images and propagate them forward in time using Koopman theory—no need for ground-truth object poses. The learned features are inherently visualizable, so we can actually see what the robot "understands." In real-world manipulation experiments, KOROL achieves high success rates even on novel objects.
