--- a/_posts/2025-02-11-Adam.md
+++ b/_posts/2025-02-11-Adam.md
@@ -12,6 +12,4 @@ arxiv: https://arxiv.org/abs/2412.02153
 code: https://github.com/Walleclipse/Adam_Initialization/ 
 ---
 
-
-
-This work identifies the standard initialization of Adam's second-order moment estimation as a key factor limiting generalization. It proposes effective solutions, including non-zero initialization with data-driven or random strategies, to improve performance.
+Adam is everywhere in deep learning, but its default initialization has a subtle flaw that hurts generalization. We traced the problem to the second-order moment estimate starting at zero—a seemingly innocent choice with real consequences. Simple fixes like data-driven or random initialization yield meaningful performance gains. Sometimes the biggest improvements come from revisiting the basics.
