--- a/_posts/2025-09-01-Thesis.md
+++ b/_posts/2025-09-01-Thesis.md
@@ -10,5 +10,4 @@ venue: "Doctoral dissertation"
 arxiv: https://www.proquest.com/docview/3245554995
 ---
 
-
-The successful deployment of intelligent robots in dynamic, real-world environments demands the ability to learn continually from streaming data—a capability that remains beyond the reach of conventional machine learning. This thesis studies three fundamental barriers to achieving this goal: catastrophic forgetting, severe data inefficiency in robotic learning, and the challenge of adaptively modeling and controlling complex nonlinear dynamics from limited experience.
+How do we build robots that keep learning throughout their lifetime—without forgetting what they already know? My doctoral thesis tackles this grand challenge head-on. Real-world robots face streaming data in ever-changing environments, yet conventional machine learning crumbles under three critical barriers: catastrophic forgetting (robots unlearn old skills when acquiring new ones), severe data hunger (learning from scratch is impractical), and the difficulty of modeling complex dynamics on the fly. This work presents principled algorithms that overcome each barrier, bringing us closer to truly autonomous, lifelong-learning robots.
