--- a/_posts/2024-11-22-HRC.md
+++ b/_posts/2024-11-22-HRC.md
@@ -12,6 +12,4 @@ code: https://github.com/intelligent-control-lab/Robust-Hierarchial-Multimodal-H
 video: https://www.youtube.com/watch?v=2kkANN9ueVY 
 ---
 
-
-
-This paper introduces a multimodal hierarchical framework for efficient long-term human-robot collaboration, integrating visual observations and speech commands for intuitive interactions. Deployed on the KINOVA GEN3 robot, the framework is validated through extensive real-world user studies.
+Imagine a robot assistant that sees what you're doing, listens to what you say, and seamlessly helps over extended periods. That's what we built. Our hierarchical framework fuses vision and speech for natural, intuitive human-robot collaboration that doesn't break down after a few minutes. We deployed it on a KINOVA GEN3 robot and validated it through real user studies—people actually found it helpful and easy to work with.
